# Figures

./: .gitignore  README.md
src/: CMakeLists.txt  circle.cpp  circle.hpp  figure.hpp  figure_factory.hpp  figure_string_converter.cpp  figure_string_converter.hpp  input_type_factory.cpp  input_type_factory.hpp  random_figure_factory.cpp  random_figure_factory.hpp  rectangle.cpp  rectangle.hpp  stream_figure_factory.cpp  stream_figure_factory.hpp  string_converter.hpp  string_to_figure_converter.cpp  string_to_figure_converter.hpp  triangle.cpp  triangle.hpp
src/app/: CMakeLists.txt  application.cpp
src/figurelib/: CMakeLists.txt  abstract_factory.hpp  circle.cpp  circle.hpp  figure.hpp  figure_factory.hpp  input_type_factory.cpp  input_type_factory.hpp  random_figure_factory.cpp  random_figure_factory.hpp  rectangle.cpp  rectangle.hpp  stream_figure_factory.cpp  stream_figure_factory.hpp  string_converter.hpp  string_convertible.hpp  string_to_figure_converter.cpp  string_to_figure_converter.hpp  triangle.cpp  triangle.hpp
test/: CMakeLists.txt  test-circle.cpp  test-classes.cpp  test-factories.cpp  test-input-type-factory.cpp  test-random-factory.cpp  test-rectangle.cpp  test-stream-figure-factory.cpp  test-string-figure-factory.cpp  test-triangle.cpp
